--- a/index.html
+++ b/index.html
@@ -13,35 +13,38 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
-        <div class="headerSocial">
-            <div class="phoneBlock"><a hfre=""><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
-            <div class="socialBlock">
-                <ul>
-                    <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                </ul>
+        <nav>
+            <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
+            <div class="headerSocial">
+                <div class="phoneBlock"><a hfre=""><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
+                <div class="socialBlock">
+                    <ul>
+                        <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <menu class="headerNav">
-            <ul>
-                <li><a href="#">Фронтальные мульчеры DAF</a></li>
-                <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
-                <li><a href="#">Запчасти</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </menu>
+            <menu class="headerNav">
+                <ul>
+                    <li><a href="#">Фронтальные мульчеры DAF</a></li>
+                    <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
+                    <li><a href="#">Запчасти</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </menu>
+        </nav>
     </header>
     <main>
         <section class="mainBlock">
             <div class="textMainBlock">
                 <h1 class="mainTitle">Мульчеры Denis Cimaf</h1>
                 <h2 class="subTitle">Потрошитель леса</h2>
-                <button class="greenBtn">
-                    <span>выбрать</span> 
-                </button>
+                <div class="button"><span>выбрать</span><i class="far fa-chevron-right"></i></div>
+            </div>
+            <div class="imgBlock">
+                <img src="img/img1.jpg" alt="Тут должна быть картинка">
             </div>
         </section>
     </main>
