--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
         <nav>
             <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
             <div class="headerSocial">
-                <div class="phoneBlock"><a hfre=""><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
-                <div class="socialBlock">
-                    <ul>
-                        <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
-                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                    </ul>
+                <div class="headerSocialBlock">
+                    <div class="phoneBlock"><a hfre="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
+                    <div class="socialBlock">
+                        <ul>
+                            <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <menu class="headerNav">
@@ -44,8 +46,33 @@
                 <div class="button"><span>выбрать</span><i class="far fa-chevron-right"></i></div>
             </div>
             <div class="imgBlock">
+                <div class="angle"></div>
                 <img src="img/img1.jpg" alt="Тут должна быть картинка">
             </div>
+        </section>
+        <section class="blockVariantImg">
+            <a href="#">
+            <div class="blockImg">
+                    <img src="img/img1.jpg" alt="">
+                    <p>Посмотреть</p>
+                </div>
+            </a>
+            <a href="#">
+            <div class="blockImg">
+                    <img src="img/img1.jpg" alt="">
+                    <p>Позвонить</p>
+                </div>
+            </a>
+            <a href="#">
+            <div class="blockImg">
+                    <img src="img/img1.jpg" alt="">
+                    <p>Написать</p>
+                </div>
+            </a>
+        </section>
+        <section class="selectMonst">
+            <h1 class="monstTitle">Выбери своего монстра</h1>
+            <h2 class="monstSubTitle">Выбери своего монстра</h2>
         </section>
     </main>
 </body>
