add new page info

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         </section>
         <section class="blockVariantImg">
             <a href="#">
-            <div class="blockImg">
+                <div class="blockImg">
                     <img src="img/img1.jpg" alt="">
                     <p>Посмотреть</p>
                 </div>
             </a>
             <a href="#">
-            <div class="blockImg">
+                <div class="blockImg">
                     <img src="img/img1.jpg" alt="">
                     <p>Позвонить</p>
                 </div>
             </a>
             <a href="#">
-            <div class="blockImg">
+                <div class="blockImg">
                     <img src="img/img1.jpg" alt="">
                     <p>Написать</p>
                 </div>
@@ -72,9 +72,49 @@
         </section>
         <section class="selectMonst">
             <h1 class="monstTitle">Выбери своего монстра</h1>
-            <h2 class="monstSubTitle">Выбери своего монстра</h2>
+            <p class="monstSubTitle">Промышленные мульчеры Denis Cimaf созданы по передовой запатентованной технологии
+                измельчения древесины, обеспечивающей максимально высокую производительность за счет небольшой мощности.
+                Древесная растительность моментально превращается в щепу.</p>
+            <div class="mostrImgBlock">
+                <div class="mostrImg"><img src="img/mostr1.png" alt="Мульчеры"></div>
+                <div class="mostrImg"><img src="img/mostr2.png" alt="Мульчеры"></div>
+            </div>
+        </section>
+        <section class="social">
+            <h2 class="socialTitle">Присоединяйся</h2>
+            <div class="socialMainBlock">
+                <div class="youTube"><iframe width="560" height="300" src="https://www.youtube.com/embed/D5Rz9LyJoDQ"
+                        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="instagramm"><img src="img/instg.jpg" alt=""></div>
+                <div class="theFacebook">Mid State Land Clearing & Forestry Mulching makes all kind of cool videos! Have
+                    a look at this Barco / DENIS CIMAF combination take down that huge pine.
+                    Give their page a visit and like!
+                </div>
+            </div>
+            <div class="socialMainBlock">
+                <div class="youTube"><iframe width="560" height="300" src="https://www.youtube.com/embed/D5Rz9LyJoDQ"
+                        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="instagramm"><img src="img/instg.jpg" alt=""></div>
+                <div class="theFacebook">Mid State Land Clearing & Forestry Mulching makes all kind of cool videos! Have
+                    a look at this Barco / DENIS CIMAF combination take down that huge pine.
+                    Give their page a visit and like!
+                </div>
+            </div>
         </section>
     </main>
+    <footer>
+        <div class="logoFooterBlock"><img src="img/logo.png" alt="Логотип"></div>
+        <div class="lineFooterBlock"></div>
+        <div class="textFooterBlock">
+            <p>Политика конфеденциальности</p>
+            <p>© 2019 Madrog Group. Все права защищены </p>
+            <p>Created by ManaMake 2019</p>
+        </div>
+    </footer>
 </body>
 
 </html>
