--- a/product.html
+++ b/product.html
@@ -1,37 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>MadRog - Product</title>
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="fa/all.css">
+<link href="https://fonts.googleapis.com/css?family=Oswald&amp;subset=cyrillic" rel="stylesheet">
 
 <body>
     <header>
-        <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
-        <div class="headerSocial">
-            <div class="phoneBlock"><a hfre=""><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
-            <div class="socialBlock">
-                <ul>
-                    <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                </ul>
+        <nav>
+            <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
+            <div class="headerSocial">
+                <div class="headerSocialBlock">
+                    <div class="phoneBlock"><a hfre="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
+                    <div class="socialBlock">
+                        <ul>
+                            <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-        <menu class="headerNav">
-            <ul>
-                <li><a href="#">Фронтальные мульчеры DAF</a></li>
-                <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
-                <li><a href="#">Запчасти</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </menu>
+            <menu class="headerNav">
+                <ul>
+                    <li><a href="#">Фронтальные мульчеры DAF</a></li>
+                    <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
+                    <li><a href="#">Запчасти</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </menu>
+        </nav>
     </header>
-
+    <main>
+        <section class="mainBlock">
+            <div class="textMainBlock">
+                <h1 class="mainTitle">Фронтальные мульчеры DAF</h1>
+                <h2 class="productSubTitle">Рабочая ширина - 65-145 см Диаметр срезаемой растительности - до 50 см Вес
+                    экскаватора - от 7 т. до 35 т
+                </h2>
+                <div class="button"><span>выбрать</span><i class="far fa-chevron-right"></i></div>
+            </div>
+            <div class="imgBlock">
+                <div class="angle"></div>
+                <img src="img/img1.jpg" alt="Тут должна быть картинка">
+            </div>
+        </section>
+        <section class="tableProduct">
+            
+        </section>
+    </main>
+    <footer>
+        <div class="logoFooterBlock"><img src="img/logo.png" alt="Логотип"></div>
+        <div class="lineFooterBlock"></div>
+        <div class="textFooterBlock">
+            <p>Политика конфеденциальности</p>
+            <p>© 2019 Madrog Group. Все права защищены </p>
+            <p>Created by ManaMake 2019</p>
+        </div>
+    </footer>
 </body>
 
 </html>
