--- a/product.html
+++ b/product.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="fa/all.css">
 <link href="https://fonts.googleapis.com/css?family=Oswald&amp;subset=cyrillic" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="slick/slick.css" />
+<link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 
 <body>
     <header>
@@ -51,7 +53,137 @@
             </div>
         </section>
         <section class="tableProduct">
-            
+            <h2 class="productTitle">Выберите модель</h2>
+            <div class="listProductSelect">
+                <ul>
+                    <li>
+                        <div class="buttonList"><span>DAF-250Ex</span></div>
+                    </li>
+                    <li>
+                        <div class="buttonList"><span>DAF-225E</span></div>
+                    </li>
+                    <li>
+                        <div class="buttonList"><span>DAF-180E</span></div>
+                    </li>
+                    <li>
+                        <div class="buttonList"><span>DAF-180D</span></div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="technologyStats">
+            <div class="technologyBlock">
+                <div class="imbBlockTechnology">
+                    <img src="img/maxresdefault.jpg" alt="Фото техники">
+                </div>
+                <div class="tableTechnology">
+                    <div class="tableText">
+                        <div class="tableTextDescr">Рабочая ширина</div>
+                        <div class="tableTextHar">189 см</div>
+                    </div>
+                    <div class="tableText">
+                        <div class="tableTextDescr">Диаметр измельчаемого материала</div>
+                        <div class="tableTextHar">20 см</div>
+                    </div>
+                    <div class="tableText">
+                        <div class="tableTextDescr">Ножей на роторе</div>
+                        <div class="tableTextHar">27 шт</div>
+                    </div>
+                    <div class="tableText">
+                        <div class="tableTextDescr">Гидравлический поток</div>
+                        <div class="tableTextHar">115 л.мин</div>
+                    </div>
+                    <div class="tableText">
+                        <div class="tableTextDescr">Давление</div>
+                        <div class="tableTextHar">240 бар </div>
+                    </div>
+                    <div class="tableText">
+                        <div class="tableTextDescr">Диаметр ротора</div>
+                        <div class="tableTextHar">46 см </div>
+                    </div>
+                    <div class="tableText">
+                        <div class="tableTextDescr">Мощность носителя</div>
+                        <div class="tableTextHar">от 63 kW</div>
+                    </div>
+                    <div class="tableText">
+                        <div class="tableTextDescr">Скорость вращения ротора</div>
+                        <div class="tableTextHar">3000 об/мин</div>
+                    </div>
+                    <div class="tableText">
+                        <div class="tableTextDescr">Вес</div>
+                        <div class="tableTextHar">1185 кг</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="advantages">
+            <h2 class="advantagesTitle">Преимущества</h2>
+            <ul class="advatagesList">
+                <li>Корпус и ротор изготовлен из стали HARDOX 100 и HARDOX 400.</li>
+                <li>В мульчерах DAF использована запатентованная технология горизонтального расположения ротора с
+                    закрепленными на нем кованными стальными ножами, стойкими к ударам и изнашиванию.</li>
+                <li> В конструкции масса ротора распределена дальше от оси вращения ротора и обладает большей
+                    кинетической энергией (силой инерции), а, соответственно, и большей силой.</li>
+                <li>Ножи мульчера до полного износа всегда находятся в остром рабочем состоянии, т.к. есть возможность
+                    их заточить.</li>
+                <li>Мульчеры оснащены аксиально-поршневыми двигателями переменного рабочего объема, которые улучшают
+                    самозапуск, сводят к минимуму перегревание, обеспечивают большее усилие, больший крутящий момент,
+                    быстрое восстановление номинальных оборотов ротора, максимальную защиту гидропривода от пиковых
+                    нагрузок, снижение расхода топлива, увеличение производительности.</li>
+                <li>Мульчеры оснащены зубчатыми полиуретановыми приводными ремнями, исключающими проскальзывание.</li>
+                <li>Производительность мульчеров DAF в 1,5-2 раза выше аналогов.</li>
+            </ul>
+            <div class="advantagesBlock">
+                <div class="appointments">
+                    <img src="img/5.png" alt="Назначени">
+                    <div class="appText">
+                        <h2>Назначение</h2>
+                        <ul>
+                            <li>Измельчение деревьев и уничтожение растительности</li>
+                            <li>Утилизация порубочных остатков</li>
+                            <li>Уничтожение пней</li>
+                            <li>Расчистка и раскорчевка участков</li>
+                            <li>Очистка леса</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="spheres">
+                    <img src="img/4.png" alt="Сферы примения">
+                    <div class="appText">
+                        <h2>Сферы применения</h2>
+                        <ul>
+                            <li>Расчистка трасс под линиями электропередач,</li>
+                            <li>Создание лесных противопожарных полос,</li>
+                            <li>Расчистка нефте-газопроводов,</li>
+                            <li>Расчистка обочин автомобильных и железных дорог, в том числе и в недоступных местах
+                                (откосы, канавы, нависшие деревья),</li>
+                            <li>Расчистка и прокладка просек.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="base">
+                    <img src="img/2.png" alt="Базовые носители">
+                    <div class="appText">
+                        <h2>Базовые носители</h2>
+                        <ul>
+                            <li>Мини-погрузчик,</li>
+                            <li>Фронтальный погрузчик,</li>
+                            <li>Трактор (колесный, гусеничный),</li>
+                            <li>Специализированные базовые машины для мульчера и т.д.</li>
+                        </ul>
+                        <span>Мульчер работает от гидравлической системы базовой машины или от автономной гидравлической
+                            станции.</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="tableSlider">
+            <div class="tableSliderImg">
+                <img src="img/imgSlider.png" alt="" class="imgInSlider">
+                <img src="img/imgSlider.png" alt="" class="imgInSlider">
+                <img src="img/imgSlider.png" alt="" class="imgInSlider">
+            </div>
+            <div class="button"><span>Стоимость</span><i class="far fa-chevron-right"></i></div>
         </section>
     </main>
     <footer>
@@ -63,6 +195,10 @@
             <p>Created by ManaMake 2019</p>
         </div>
     </footer>
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
