add new version block main

--- a/product.html
+++ b/product.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
     <main>
-        <section class="mainBlock">
+        <section class="mainBlockProduct">
             <div class="textMainBlock">
                 <h1 class="mainTitle">Фронтальные мульчеры DAF</h1>
                 <h2 class="productSubTitle">Рабочая ширина - 65-145 см Диаметр срезаемой растительности - до 50 см Вес
@@ -48,7 +48,6 @@
                 <div class="button"><span>выбрать</span><i class="far fa-chevron-right"></i></div>
             </div>
             <div class="imgBlock">
-                <div class="angle"></div>
                 <img src="img/img1.jpg" alt="Тут должна быть картинка">
             </div>
         </section>
@@ -178,13 +177,16 @@
             </div>
         </section>
         <section class="tableSlider">
-            <div class="tableSliderImg">
+            <div class="tableSliderImg">       
+                <img src="img/imgSlider.png" alt="" class="imgInSlider">
+                <img src="img/imgSlider.png" alt="" class="imgInSlider">
                 <img src="img/imgSlider.png" alt="" class="imgInSlider">
                 <img src="img/imgSlider.png" alt="" class="imgInSlider">
                 <img src="img/imgSlider.png" alt="" class="imgInSlider">
             </div>
             <div class="button"><span>Стоимость</span><i class="far fa-chevron-right"></i></div>
         </section>
+        
     </main>
     <footer>
         <div class="logoFooterBlock"><img src="img/logo.png" alt="Логотип"></div>
