add new page contact and servis

--- a/contact.html
+++ b/contact.html
@@ -5,33 +5,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>MadRog</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fa/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&amp;subset=cyrillic" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
-        <div class="headerSocial">
-            <div class="phoneBlock"><a hfre=""><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
-            <div class="socialBlock">
-                <ul>
-                    <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                </ul>
+        <nav>
+            <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
+            <div class="headerSocial">
+                <div class="headerSocialBlock">
+                    <div class="phoneBlock"><a hfre="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
+                    <div class="socialBlock">
+                        <ul>
+                            <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-        <menu class="headerNav">
-            <ul>
-                <li><a href="#">Фронтальные мульчеры DAF</a></li>
-                <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
-                <li><a href="#">Запчасти</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </menu>
+            <menu class="headerNav">
+                <ul>
+                    <li><a href="#">Фронтальные мульчеры DAF</a></li>
+                    <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
+                    <li><a href="#">Запчасти</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </menu>
+        </nav>
     </header>
-
+    <main>
+        <section class="contact">
+            <h1 class="contactTitle">Контакты</h1>
+            <div class="contactBlockText">
+                <div class="contactHeader">
+                    Генеральное представительство DEnis Cimaf на территории России:
+                </div>
+                <div class="contactBody">
+                    <p>214030, г. Смоленск, Краснинское шоссе, 14</p>
+                    <p><a href="#">+7 (4812) 248-000</a></p>
+                    <p><a href="#">sales@madrog.ru</a></p>
+                </div>
+                <div class="contactFooter">
+                    <p>Единый номер по всей России:</p>
+                    <p><a href="#">8 800 505 5008</a> (звонок бесплатный).</p>
+                </div>
+            </div>
+        </section>
+        <section class="contactMap">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2301.506498727151!2d31.984667515298636!3d54.771063074742685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ce578d5e7df7b1%3A0x570e4d9cae33ddc9!2z0JrRgNCw0YHQvdC40L3RgdC60L7QtSDRiC4sIDE0LCDQodC80L7Qu9C10L3RgdC6LCDQodC80L7Qu9C10L3RgdC60LDRjyDQvtCx0LsuLCAyMTQwMzA!5e0!3m2!1sru!2sru!4v1557742073814!5m2!1sru!2sru" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </section>
+    </main>
+    <footer>
+        <div class="logoFooterBlock"><img src="img/logo.png" alt="Логотип"></div>
+        <div class="lineFooterBlock"></div>
+        <div class="textFooterBlock">
+            <p>Политика конфеденциальности</p>
+            <p>© 2019 Madrog Group. Все права защищены </p>
+            <p>Created by ManaMake 2019</p>
+        </div>
+    </footer>
 </body>
 
 </html>
