--- a/servis.html
+++ b/servis.html
@@ -5,32 +5,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>MadRog</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fa/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&amp;subset=cyrillic" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
-        <div class="headerSocial">
-            <div class="phoneBlock"><a hfre=""><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
-            <div class="socialBlock">
-                <ul>
-                    <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                </ul>
+        <nav>
+            <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
+            <div class="headerSocial">
+                <div class="headerSocialBlock">
+                    <div class="phoneBlock"><a hfre="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
+                    <div class="socialBlock">
+                        <ul>
+                            <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-        <menu class="headerNav">
-            <ul>
-                <li><a href="#">Фронтальные мульчеры DAF</a></li>
-                <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
-                <li><a href="#">Запчасти</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </menu>
+            <menu class="headerNav">
+                <ul>
+                    <li><a href="#">Фронтальные мульчеры DAF</a></li>
+                    <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
+                    <li><a href="#">Запчасти</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </menu>
+        </nav>
     </header>
+    <main>
+        <section class="servis">
+            <div class="servisBlock">
+                <div class="servisBlockText">
+                    <h1 class="servisTitle">Сервисное обслуживание</h1>
+                    <p class="servisTextDescr">Компания DENIS CIMAF предлагает услуги по обслуживанию широкого
+                        ассортимента
+                        продукции, а также решения, которые помогут нашим клиентам увеличить производительность и быть
+                        впереди конкурентов. Высочайший уровень сервиса основывается на многолетнем опыте, совмещенном с
+                        инновационными продуктами ведущего производителя промышленных кусторезов-мульчеров для
+                        экскаваторов,
+                        экскаваторов-погрузчиков, ковшовых погрузчиков, лесохозяйственных тракторов и грейдеров компании
+                        DENIS CIMAF.
+                    </p>
+                    <div class="button"><span>Заявка</span><i class="far fa-chevron-right"></i></div>
+
+                </div>
+                <div class="servisBlockImg"><img src="img/servis.jpg" alt="Сервис"></div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="logoFooterBlock"><img src="img/logo.png" alt="Логотип"></div>
+        <div class="lineFooterBlock"></div>
+        <div class="textFooterBlock">
+            <p>Политика конфеденциальности</p>
+            <p>© 2019 Madrog Group. Все права защищены </p>
+            <p>Created by ManaMake 2019</p>
+        </div>
+    </footer>
 
 </body>
 
