add new modal img and callback

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
             <p>Created by ManaMake 2019</p>
         </div>
     </footer>
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
