--- a/product.html
+++ b/product.html
@@ -177,16 +177,16 @@
             </div>
         </section>
         <section class="tableSlider">
-            <div class="tableSliderImg">       
-                <img src="img/imgSlider.png" alt="" class="imgInSlider">
-                <img src="img/imgSlider.png" alt="" class="imgInSlider">
-                <img src="img/imgSlider.png" alt="" class="imgInSlider">
-                <img src="img/imgSlider.png" alt="" class="imgInSlider">
-                <img src="img/imgSlider.png" alt="" class="imgInSlider">
+            <div class="tableSliderImg">
+                <a href="#" class="imgInSlider"><img src="img/imgSlider.png" alt=""></a>
+                <a href="#" class="imgInSlider"><img src="img/imgSlider.png" alt=""></a>
+                <a href="#" class="imgInSlider"><img src="img/imgSlider.png" alt=""></a>
+                <a href="#" class="imgInSlider"><img src="img/imgSlider.png" alt=""></a>
+                <a href="#" class="imgInSlider"><img src="img/imgSlider.png" alt=""></a>
             </div>
             <div class="button"><span>Стоимость</span><i class="far fa-chevron-right"></i></div>
         </section>
-        
+
     </main>
     <footer>
         <div class="logoFooterBlock"><img src="img/logo.png" alt="Логотип"></div>
@@ -197,6 +197,33 @@
             <p>Created by ManaMake 2019</p>
         </div>
     </footer>
+    <!-- Modal -->
+    <div class="modalImg">
+        <div class="modalBody">
+            <img src="img/imgSlider.png" alt="" srcset="">
+        </div>
+    </div>
+    <div class="modalPopup">
+        <div class="modalBodyPopupS">
+            <div class="close">Закрыть<i class="far fa-times"></i></div>
+            <h2 class="modalPopupTitle">Обратный звонок</h2>
+            <form action="" class="modalPopup">
+                <label for="name">имя</label>
+                <input id="name" type="text">
+                <label for="phone">Телефон</label>
+                <input id="phone" type="text">
+                <label for="mess">Сообщение</label>
+                <textarea name="" id="mess" class="callBack"></textarea>
+                <div class="modalRules">
+                    <input type="checkbox" id="check"><label for="check">Я прочитал(а) и соглашаюсь с правилами сайта и
+                        даю свое согласие на обработку персональных данных. <a href="#">Политика
+                            конфеденциальности</a></label>
+                </div>
+                <div class="button"><i class="far fa-paper-plane"></i><span>Отправить</span></div>
+            </form>
+        </div>
+    </div>
+    <!-- end -->
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
