add popup on page

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
+            <div class="logo"><a href="index.html"><img src="img/logo.png" alt="Логотип"></a></div>
             <div class="headerSocial">
                 <div class="headerSocialBlock">
                     <div class="phoneBlock"><a hfre="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
@@ -32,8 +32,8 @@
                 <ul>
                     <li><a href="#">Фронтальные мульчеры DAF</a></li>
                     <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
-                    <li><a href="#">Запчасти</a></li>
-                    <li><a href="#">Контакты</a></li>
+                    <li><a href="servis.html">Запчасти</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
                 </ul>
             </menu>
         </nav>
@@ -43,7 +43,7 @@
             <h1 class="contactTitle">Контакты</h1>
             <div class="contactBlockText">
                 <div class="contactHeader">
-                    Генеральное представительство DEnis Cimaf на территории России:
+                    Генеральное представительство Denis Cimaf на территории России:
                 </div>
                 <div class="contactBody">
                     <p>214030, г. Смоленск, Краснинское шоссе, 14</p>
