--- a/servis.html
+++ b/servis.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
+            <div class="logo"><a href="index.html"><img src="img/logo.png" alt="Логотип"></a></div>
             <div class="headerSocial">
                 <div class="headerSocialBlock">
                     <div class="phoneBlock"><a hfre="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
@@ -32,8 +32,8 @@
                 <ul>
                     <li><a href="#">Фронтальные мульчеры DAF</a></li>
                     <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
-                    <li><a href="#">Запчасти</a></li>
-                    <li><a href="#">Контакты</a></li>
+                    <li><a href="servis.html">Запчасти</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
                 </ul>
             </menu>
         </nav>
@@ -52,7 +52,7 @@
                         экскаваторов-погрузчиков, ковшовых погрузчиков, лесохозяйственных тракторов и грейдеров компании
                         DENIS CIMAF.
                     </p>
-                    <div class="button"><span>Заявка</span><i class="far fa-chevron-right"></i></div>
+                    <div class="button request"><span>Заявка</span><i class="far fa-chevron-right"></i></div>
 
                 </div>
                 <div class="servisBlockImg"><img src="img/servis.jpg" alt="Сервис"></div>
@@ -68,6 +68,15 @@
             <p>Created by ManaMake 2019</p>
         </div>
     </footer>
+    <div class="modalPopup">
+        <div class="modalBodyPopupS">
+            
+        </div>
+    </div>
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 
