--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
+            <div class="logo"><a href="index.html"><img src="img/logo.png" alt="Логотип"></a></div>
             <div class="headerSocial">
                 <div class="headerSocialBlock">
                     <div class="phoneBlock"><a hfre="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
@@ -32,8 +32,8 @@
                 <ul>
                     <li><a href="#">Фронтальные мульчеры DAF</a></li>
                     <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
-                    <li><a href="#">Запчасти</a></li>
-                    <li><a href="#">Контакты</a></li>
+                    <li><a href="servis.html">Запчасти</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
                 </ul>
             </menu>
         </nav>
@@ -43,7 +43,7 @@
             <div class="textMainBlock">
                 <h1 class="mainTitle">Мульчеры Denis Cimaf</h1>
                 <h2 class="subTitle">Потрошитель леса</h2>
-                <div class="button"><span>выбрать</span><i class="far fa-chevron-right"></i></div>
+                <div class="button callBack"><span>выбрать</span><i class="far fa-chevron-right"></i></div>
             </div>
             <div class="imgBlock">
                 <img src="img/img1.jpg" alt="Тут должна быть картинка">
@@ -114,6 +114,11 @@
             <p>Created by ManaMake 2019</p>
         </div>
     </footer>
+    <div class="modalPopup">
+        <div class="modalBodyPopupS">
+            
+        </div>
+    </div>
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
