--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
+            <div class="logo"><a href="index.html"><img src="img/logo.png" alt="Логотип"></a></div>
             <div class="headerSocial">
                 <div class="headerSocialBlock">
                     <div class="phoneBlock"><a hfre="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
@@ -32,8 +32,8 @@
                 <ul>
                     <li><a href="#">Фронтальные мульчеры DAF</a></li>
                     <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
-                    <li><a href="#">Запчасти</a></li>
-                    <li><a href="#">Контакты</a></li>
+                    <li><a href="servis.html">Запчасти</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
                 </ul>
             </menu>
         </nav>
@@ -45,7 +45,7 @@
                 <h2 class="productSubTitle">Рабочая ширина - 65-145 см Диаметр срезаемой растительности - до 50 см Вес
                     экскаватора - от 7 т. до 35 т
                 </h2>
-                <div class="button"><span>выбрать</span><i class="far fa-chevron-right"></i></div>
+                <div class="button"><span>Стоимость</span><i class="far fa-chevron-right"></i></div>
             </div>
             <div class="imgBlock">
                 <img src="img/img1.jpg" alt="Тут должна быть картинка">
@@ -184,7 +184,7 @@
                 <a href="#" class="imgInSlider"><img src="img/imgSlider.png" alt=""></a>
                 <a href="#" class="imgInSlider"><img src="img/imgSlider.png" alt=""></a>
             </div>
-            <div class="button"><span>Стоимость</span><i class="far fa-chevron-right"></i></div>
+            <div class="button sale"><span>Стоимость</span><i class="far fa-chevron-right"></i></div>
         </section>
 
     </main>
@@ -205,22 +205,7 @@
     </div>
     <div class="modalPopup">
         <div class="modalBodyPopupS">
-            <div class="close">Закрыть<i class="far fa-times"></i></div>
-            <h2 class="modalPopupTitle">Обратный звонок</h2>
-            <form action="" class="modalPopup">
-                <label for="name">имя</label>
-                <input id="name" type="text">
-                <label for="phone">Телефон</label>
-                <input id="phone" type="text">
-                <label for="mess">Сообщение</label>
-                <textarea name="" id="mess" class="callBack"></textarea>
-                <div class="modalRules">
-                    <input type="checkbox" id="check"><label for="check">Я прочитал(а) и соглашаюсь с правилами сайта и
-                        даю свое согласие на обработку персональных данных. <a href="#">Политика
-                            конфеденциальности</a></label>
-                </div>
-                <div class="button"><i class="far fa-paper-plane"></i><span>Отправить</span></div>
-            </form>
+            
         </div>
     </div>
     <!-- end -->
