add hover effect in img main

--- a/index.html
+++ b/index.html
@@ -75,8 +75,25 @@
                 измельчения древесины, обеспечивающей максимально высокую производительность за счет небольшой мощности.
                 Древесная растительность моментально превращается в щепу.</p>
             <div class="mostrImgBlock">
-                <div class="mostrImg"><img src="img/mostr1.png" alt="Мульчеры"></div>
-                <div class="mostrImg"><img src="img/mostr2.png" alt="Мульчеры"></div>
+                <div class="mostrImg">
+                    <div class="mostrBlockHover">
+                        <div class="hoverContent">
+                            <h2 class="mostrBlockHoverTitle">Экскаваторные
+                                мульчеры DAH</h2>
+                            <div class="button"><span>Параметры</span><i class="far fa-chevron-right"></i></div>
+                        </div>
+                    </div>
+                    <img src="img/mostr1.png" alt="Мульчеры">
+                </div>
+                <div class="mostrImg">
+                    <div class="mostrBlockHover">
+                        <div class="hoverContent">
+                            <h2 class="mostrBlockHoverTitle">Фронтальные мульчеры DAF</h2>
+                            <div class="button"><span>Параметры</span><i class="far fa-chevron-right"></i></div>
+                        </div>
+                    </div>
+                    <img src="img/mostr2.png" alt="Мульчеры">
+                </div>
             </div>
         </section>
         <section class="social">
@@ -116,7 +133,7 @@
     </footer>
     <div class="modalPopup">
         <div class="modalBodyPopupS">
-            
+
         </div>
     </div>
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
