add table main version

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="index.html"><img src="img/logo.png" alt="Логотип"></a></div>
+            <div class="logo"><a href="index.html"><img srcset="img/logoInMob.svg 800w, img/logo.png 1000w" sizes="(max-width: 800px) 800px, 1000px" src="img/logo.png" alt="Логотип"></a></div>
             <div class="headerSocial">
                 <div class="headerSocialBlock">
-                    <div class="phoneBlock"><a hfre="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a></div>
+                    <div class="phoneBlock">
+                        <a href="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a>
+                    </div>
+                    <div class="burgerMenuInMobVesion">
+                        <i class="far fa-bars"></i>
+                    </div>
                     <div class="socialBlock">
                         <ul>
                             <li><a href="#"><i class="far fa-envelope-open"></i></a></li>
@@ -30,8 +35,8 @@
             </div>
             <menu class="headerNav">
                 <ul>
-                    <li><a href="#">Фронтальные мульчеры DAF</a></li>
-                    <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
+                    <li><a href="product.html">Фронтальные мульчеры DAF</a></li>
+                    <li><a href="product.html">Мульчеры для экскаватаров DAH</a></li>
                     <li><a href="servis.html">Запчасти</a></li>
                     <li><a href="contact.html">Контакты</a></li>
                 </ul>
@@ -80,7 +85,7 @@
                         <div class="hoverContent">
                             <h2 class="mostrBlockHoverTitle">Экскаваторные
                                 мульчеры DAH</h2>
-                            <div class="button"><span>Параметры</span><i class="far fa-chevron-right"></i></div>
+                            <a href="product.html"><div class="button"><span>Параметры</span><i class="far fa-chevron-right"></i></div></a>
                         </div>
                     </div>
                     <img src="img/mostr1.png" alt="Мульчеры">
@@ -89,7 +94,7 @@
                     <div class="mostrBlockHover">
                         <div class="hoverContent">
                             <h2 class="mostrBlockHoverTitle">Фронтальные мульчеры DAF</h2>
-                            <div class="button"><span>Параметры</span><i class="far fa-chevron-right"></i></div>
+                            <a href="product.html"><div class="button"><span>Параметры</span><i class="far fa-chevron-right"></i></div></a>
                         </div>
                     </div>
                     <img src="img/mostr2.png" alt="Мульчеры">
