--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <section class="social">
             <h2 class="socialTitle">Присоединяйся</h2>
             <div class="socialMainBlock">
-                <div class="youTube"><iframe width="560" height="300" src="https://www.youtube.com/embed/D5Rz9LyJoDQ"
+                <div class="youTube"><iframe src="https://www.youtube.com/embed/D5Rz9LyJoDQ"
                         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
